# zeta

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
zeta/: config.py  constants.py  factory.py  radarr.py  zeta.py
zeta/conversation/: refresh.py  want.py
zeta/messages/: plex_movie_search_result.html  radarr_movie_search_result.html
