[metadata]
name = zeta
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = telegram chat bot for your home server
home-page = https://github.com/lad1337/zeta-bot
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries


[entry_points]
console_scripts =
    zeta-bot = zeta.zeta:main