[metadata]
name = zeta
author = Dennis Lutter
author-email = lad1337@gmail.com
version = 1.0
summary = telegram chat bot for your home server
home-page = https://github.com/lad1337/zeta-bot
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries


[entry_points]
console_scripts =
    zeta-bot = zeta.zeta:main